# fast-pursuit

./: .gitignore  Agent2D.m  DiffDriveController.m  HolonomicController.m  Map2D_fast.m  Planner2D_fast.m  README.md  benchmark.m  calibrate_inertial.m  control_car.m  demo.m  demo_teleop.m
Arduino/car_drive_no_runtime/: car_drive_no_runtime.ino
MATLAB/: README.md  Rz.m  benchmark.m  car_drive.ino
MATLAB/simulations/: p1e1.mat
car_drive_no_runtime/: car_drive_no_runtime.ino
maps/: lab_map.mat  maze.mat
pursuit/: CMakeLists.txt
pursuit/include/GamePhysics/: Compare.h  Geometry3D.cpp  Scene.h
pursuit/include/Pursuit/: Map.cpp  Map.h  Pursuit.cpp  Pursuit.h
pursuit/scripts/: benchmark.sh  tree_benchmark.sh
pursuit/src/: benchmark.cpp  tree_benchmark.cpp
pursuit3d/: CMakeLists.txt  package.xml
pursuit3d/config/: solver.yaml
pursuit3d/launch/: demo.launch  pursuit.launch
pursuit3d/msg/: Interception.msg
pursuit3d/rviz/: pursuit.rviz
pursuit3d/scripts/: publish_robots.py
pursuit3d/src/: benchmark.cpp  plot_rviz.cpp  pursuit.cpp  pursuit_ros.cpp  test.cpp
pursuit3d/src/GamePhysics/: Geometry3D.cpp  Geometry3D.h  Map.cpp  Map.h  Scene.cpp
pursuit3d/src/Pursuit/: Map.cpp  Map.h  Pursuit.cpp  Pursuit.h
pursuit3d/urdf/: campus.urdf
pursuit_msgs/: CMakeLists.txt  package.xml
pursuit_ros/: CMakeLists.txt  package.xml
pursuit_ros/config/: campus.yaml  example_problem.yaml  nicepath.yaml
pursuit_ros/include/: PursuitWrapper.h
pursuit_ros/launch/: demo.launch
pursuit_ros/rviz/: pursuit.rviz
pursuit_ros/src/: PursuitWrapper.cpp  plot_rviz.cpp  pursuit_ros.cpp
